feat: updated version command